@@ -315,6 +315,8 @@ logfile     =
 #                                                    If set to "fixed", the value of MOUNT -freesize will be a fixed one to be reported all the time.
 #                                                    Possible values: true, false, fixed, relative, cap, 2, 1, 0.
 #DOSBOX-X-ADV:#               leading colon write protect image: If set, BOOT and IMGMOUNT commands will put an image file name with a leading colon (:) in write-protect mode.
+#DOSBOX-X-ADV:#                        locking disk image mount: If set, BOOT and IMGMOUNT commands will try to lock the mounted disk image files. As a result, you cannot
+#DOSBOX-X-ADV:#                                                    mount the same disk image files in read/write mode at the same time as this can cause possible disk corruptions.
 #DOSBOX-X-ADV:#                  unmask keyboard on int 16 read: If set, INT 16h will unmask IRQ 1 (keyboard) when asked to read keyboard input.
 #DOSBOX-X-ADV:#                                                    It is strongly recommended that you set this option if running Windows 3.11 Windows for Workgroups in DOSBox-X.
 #DOSBOX-X-ADV:# int16 keyboard polling undocumented cf behavior: If set, INT 16h function AH=01h will also set/clear the carry flag depending on whether input was available.
@@ -396,6 +398,7 @@ memsize                                         = 16
 nocachedir                                      = false
 freesizecap                                     = cap
 #DOSBOX-X-ADV:leading colon write protect image               = true
+#DOSBOX-X-ADV:locking disk image mount                        = true
 #DOSBOX-X-ADV:unmask keyboard on int 16 read                  = true
 #DOSBOX-X-ADV:int16 keyboard polling undocumented cf behavior = false
 #DOSBOX-X-ADV:allow port 92 reset                             = true
